update, add header

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-    <header class="header">
+    <nav class="navbar">
         <div class="container">
             <input type="checkbox" id="menu" class="container__button">
             <label for="menu">
-                <span class="header__hamburguer-menu container__image"></span>
+                <span class="nav__hamburguer-menu container__image"></span>
             </label>
             <ul class="list-menu">
                 <li class="list-menu__title">Categorias</li>
@@ -41,11 +41,17 @@
             <img src="img/logo.svg" alt="Logo da AluraBooks" class="container__image">
         </div>
         <div class="container">
-            <a href="#"><img src="img/favoritos.svg" alt="Meus favoritos" class="container__image"></a>
-            <a href="#"><img src="img/compras.svg" alt="Carrinho de compras" class="container__image"></a>
-            <a href="#"><img src="img/usuario.svg" alt="Meu perfil" class="container__image"></a>
+            <a href="#"><img src="img/favorite.svg" alt="Meus favoritos" class="container__image"></a>
+            <a href="#"><img src="img/bag.svg" alt="Carrinho de compras" class="container__image"></a>
+            <a href="#"><img src="img/user.svg" alt="Meu perfil" class="container__image"></a>
         </div>
-    </header>
+    </nav>
+
+    <section class="header">
+        <h2 class="header__title">Já sabe por onde começar?</h2>
+        <p class="header__text">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+        <input type="search" class="header__search" placeholder="Qual será sua próxima leitura?">
+    </section>
     
 </body>
 
