update, adding sections with carousel, and section with topics

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/styles.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+
+    <link rel="stylesheet" href="styles/styles.css">
+
 </head>
 
 <body>
@@ -52,7 +59,134 @@
         <p class="header__text">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
         <input type="search" class="header__search" placeholder="Qual será sua próxima leitura?">
     </section>
+
+    <section class="carousel">
+        <h2 class="carousel__title">Últimos lançamentos</h2>
+
+        <!-- Slider main container -->
+        <div class="swiper">
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+            <!-- Slides -->
+                <div class="swiper-slide"> <img src="/img/books/ApacheKafka.svg" alt="Livro sobre apache kafka e spring boot da alura books"> </div>
+                <div class="swiper-slide"> <img src="/img/books/Liderança.svg" alt="Livro sobre liderança em design da alura books"> </div>
+                <div class="swiper-slide"> <img src="/img/books/Javascript.svg" alt="Livro sobre javascript assertivo da alura books"> </div>
+                <div class="swiper-slide"> <img src="/img/books/GuiaFront-end.svg" alt="Livro guia Front-end"> </div>
+                <div class="swiper-slide"> <img src="/img/books/Portugol.svg" alt="Livro sobre portugol"> </div>
+                <div class="swiper-slide"> <img src="/img/books/Acessibilidade.svg" alt="Livro sobre Acessibilidade"> </div>
+            </div>
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+
+        <div class="card">
+            <div class="card__description">
+                <div class="description">
+                    <h3 class="description__title">Talvez você também se interesse por...</h3>
+                    <h2 class="description__title-book">Angular 11 e Firebase</h2>
+                    <p class="description__text">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                </div>
+                <img src="/img/angular.svg" alt="Logo da plataforma de aplicações web Angular" class="description__image">
+            </div>
+            <div class="card__buttons">
+                <ul class="buttons">
+                    <li class="buttons__item"><img src="/img/favorite.svg" alt="Favoritar livro"></li>
+                    <li class="buttons__item"><img src="/img/bag.svg" alt="Adicionar livro no carrinho de compras"></li>
+                </ul>
+                <a href="#" class="buttons__anchor">Saiba mais</a>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="carousel">
+        <h2 class="carousel__title">Mais vendidos</h2>
+        
+        <!-- Slider main container -->
+        <div class="swiper">
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+            <!-- Slides -->
+                <div class="swiper-slide"> <img src="/img/books/Javascript.svg" alt="Livro sobre javascript assertivo da alura books"> </div>
+                <div class="swiper-slide"> <img src="/img/books/ApacheKafka.svg" alt="Livro sobre apache kafka e spring boot da alura books"> </div>
+                <div class="swiper-slide"> <img src="/img/books/Liderança.svg" alt="Livro sobre liderança em design da alura books"> </div>
+                <div class="swiper-slide"> <img src="/img/books/Acessibilidade.svg" alt="Livro sobre Acessibilidade"> </div>
+                <div class="swiper-slide"> <img src="/img/books/Portugol.svg" alt="Livro sobre portugol"> </div>
+                <div class="swiper-slide"> <img src="/img/books/GuiaFront-end.svg" alt="Livro guia Front-end"> </div>
+            </div>
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+
+        <div class="card">
+            <div class="card__description">
+                <div class="description">
+                    <img src="/img/stars.svg" alt="Avaliação 5 estrelas" class="description__title-image">
+                    <h3 class="description__title">Autora do Mês</h3>
+                    <h2 class="description__title-book">Juliana Agarikov</h2>
+                    <p class="description__text">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+                </div>
+                <img src="/img/profile-writer.png" alt="Foto da autora Juliana Agarikov" class="description__image">
+            </div>
+            <div class="card__buttons">
+                <ul class="buttons">
+                    <li class="buttons__item"><img src="/img/favorite.svg" alt="Favoritar livro"></li>
+                    <li class="buttons__item"><img src="/img/bag.svg" alt="Adicionar livro no carrinho de compras"></li>
+                </ul>
+                <a href="#" class="buttons__anchor">Saiba mais</a>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="topics">
+        <h2 class="topics__title">Tópicos visitados recentemente</h2>
+        <ul class="topics__list">
+            <li class="topics__item">
+                <a href="#" class="topics__link">Android</a>
+            </li>
+            <li class="topics__item">
+                <a href="#" class="topics__link">Marketing Digital</a>
+            </li>
+            <li class="topics__item">
+                <a href="#" class="topics__link">Agile</a>
+            </li>
+            <li class="topics__item">
+                <a href="#" class="topics__link">Startups</a>
+            </li>
+            <li class="topics__item">
+                <a href="#" class="topics__link">HTML & CSS</a>
+            </li>
+            <li class="topics__item">
+                <a href="#" class="topics__link">Python</a>
+            </li>
+            <li class="topics__item">
+                <a href="#" class="topics__link">OO</a>
+            </li>
+            <li class="topics__item">
+                <a href="#" class="topics__link">Java</a>
+            </li>
+        </ul>
+    </section>
     
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script>
+        const swiper = new Swiper('.swiper', {
+            spaceBetween: 10,
+            slidesPerView: 3,
+            pagination: {
+                el: '.swiper-pagination',
+                type: 'bullets',
+            },
+        });
+    </script>
 </body>
 
 </html>
