--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
 
     <link rel="stylesheet" href="styles/styles.css">
-
 </head>
 
 <body>
@@ -79,9 +78,17 @@
         </ul>
 
         <div class="container">
-            <a href="#"><img src="img/favorite.svg" alt="Meus favoritos" class="container__image container__image-transparent"></a>
-            <a href="#"><img src="img/bag.svg" alt="Carrinho de compras" class="container__image"></a>
-            <a href="#"><img src="img/user.svg" alt="Meu perfil" class="container__image"></a>
+            <a href="#">
+                <img src="img/favorite.svg" alt="Meus favoritos" class="container__image container__image-transparent">
+            </a>
+            <a href="#" class="container__link"> 
+                <img src="img/bag.svg" alt="Carrinho de compras" class="container__image">
+                <p class="container__text">Minha sacola</p>
+            </a>
+            <a href="#" class="container__link"> 
+                <img src="img/user.svg" alt="Meu perfil" class="container__image">
+                <p class="container__text">Meu perfil</p>
+            </a>
         </div>
     </nav>
 
@@ -94,40 +101,42 @@
     <section class="carousel">
         <h2 class="carousel__title">Últimos lançamentos</h2>
 
-        <!-- Slider main container -->
-        <div class="swiper">
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-            <!-- Slides -->
-                <div class="swiper-slide"> <img src="/img/books/ApacheKafka.svg" alt="Livro sobre apache kafka e spring boot da alura books"> </div>
-                <div class="swiper-slide"> <img src="/img/books/Liderança.svg" alt="Livro sobre liderança em design da alura books"> </div>
-                <div class="swiper-slide"> <img src="/img/books/Javascript.svg" alt="Livro sobre javascript assertivo da alura books"> </div>
-                <div class="swiper-slide"> <img src="/img/books/GuiaFront-end.svg" alt="Livro guia Front-end"> </div>
-                <div class="swiper-slide"> <img src="/img/books/Portugol.svg" alt="Livro sobre portugol"> </div>
-                <div class="swiper-slide"> <img src="/img/books/Acessibilidade.svg" alt="Livro sobre Acessibilidade"> </div>
-            </div>
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-
-        <div class="card">
-            <div class="card__description">
-                <div class="description">
-                    <h3 class="description__title">Talvez você também se interesse por...</h3>
-                    <h2 class="description__title-book">Angular 11 e Firebase</h2>
-                    <p class="description__text">Construindo uma aplicação integrada com a plataforma do Google.</p>
+        <div class="carousel__container">
+            <!-- Slider main container -->
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                <!-- Slides -->
+                    <div class="swiper-slide"> <img src="/img/books/ApacheKafka.svg" alt="Livro sobre apache kafka e spring boot da alura books"> </div>
+                    <div class="swiper-slide"> <img src="/img/books/Liderança.svg" alt="Livro sobre liderança em design da alura books"> </div>
+                    <div class="swiper-slide"> <img src="/img/books/Javascript.svg" alt="Livro sobre javascript assertivo da alura books"> </div>
+                    <div class="swiper-slide"> <img src="/img/books/GuiaFront-end.svg" alt="Livro guia Front-end"> </div>
+                    <div class="swiper-slide"> <img src="/img/books/Portugol.svg" alt="Livro sobre portugol"> </div>
+                    <div class="swiper-slide"> <img src="/img/books/Acessibilidade.svg" alt="Livro sobre Acessibilidade"> </div>
                 </div>
-                <img src="/img/angular.svg" alt="Logo da plataforma de aplicações web Angular" class="description__image">
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
-            <div class="card__buttons">
-                <ul class="buttons">
-                    <li class="buttons__item"><img src="/img/favorite.svg" alt="Favoritar livro"></li>
-                    <li class="buttons__item"><img src="/img/bag.svg" alt="Adicionar livro no carrinho de compras"></li>
-                </ul>
-                <a href="#" class="buttons__anchor">Saiba mais</a>
+
+            <div class="card">
+                <div class="card__description">
+                    <div class="description">
+                        <h3 class="description__title">Talvez você também se interesse por...</h3>
+                        <h2 class="description__title-book">Angular 11 e Firebase</h2>
+                        <p class="description__text">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    </div>
+                    <img src="/img/angular.svg" alt="Logo da plataforma de aplicações web Angular" class="description__image">
+                </div>
+                <div class="card__buttons">
+                    <ul class="buttons">
+                        <li class="buttons__item"><img src="/img/favorite.svg" alt="Favoritar livro"></li>
+                        <li class="buttons__item"><img src="/img/bag.svg" alt="Adicionar livro no carrinho de compras"></li>
+                    </ul>
+                    <a href="#" class="buttons__anchor">Saiba mais</a>
+                </div>
             </div>
         </div>
 
@@ -136,41 +145,43 @@
     <section class="carousel">
         <h2 class="carousel__title">Mais vendidos</h2>
         
+        <div class="carousel__container">
         <!-- Slider main container -->
-        <div class="swiper">
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-            <!-- Slides -->
-                <div class="swiper-slide"> <img src="/img/books/Javascript.svg" alt="Livro sobre javascript assertivo da alura books"> </div>
-                <div class="swiper-slide"> <img src="/img/books/ApacheKafka.svg" alt="Livro sobre apache kafka e spring boot da alura books"> </div>
-                <div class="swiper-slide"> <img src="/img/books/Liderança.svg" alt="Livro sobre liderança em design da alura books"> </div>
-                <div class="swiper-slide"> <img src="/img/books/Acessibilidade.svg" alt="Livro sobre Acessibilidade"> </div>
-                <div class="swiper-slide"> <img src="/img/books/Portugol.svg" alt="Livro sobre portugol"> </div>
-                <div class="swiper-slide"> <img src="/img/books/GuiaFront-end.svg" alt="Livro guia Front-end"> </div>
-            </div>
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-
-        <div class="card">
-            <div class="card__description">
-                <div class="description">
-                    <img src="/img/stars.svg" alt="Avaliação 5 estrelas" class="description__title-image">
-                    <h3 class="description__title">Autora do Mês</h3>
-                    <h2 class="description__title-book">Juliana Agarikov</h2>
-                    <p class="description__text">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                <!-- Slides -->
+                    <div class="swiper-slide"> <img src="/img/books/Javascript.svg" alt="Livro sobre javascript assertivo da alura books"> </div>
+                    <div class="swiper-slide"> <img src="/img/books/ApacheKafka.svg" alt="Livro sobre apache kafka e spring boot da alura books"> </div>
+                    <div class="swiper-slide"> <img src="/img/books/Liderança.svg" alt="Livro sobre liderança em design da alura books"> </div>
+                    <div class="swiper-slide"> <img src="/img/books/Acessibilidade.svg" alt="Livro sobre Acessibilidade"> </div>
+                    <div class="swiper-slide"> <img src="/img/books/Portugol.svg" alt="Livro sobre portugol"> </div>
+                    <div class="swiper-slide"> <img src="/img/books/GuiaFront-end.svg" alt="Livro guia Front-end"> </div>
                 </div>
-                <img src="/img/profile-writer.png" alt="Foto da autora Juliana Agarikov" class="description__image">
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
-            <div class="card__buttons">
-                <ul class="buttons">
-                    <li class="buttons__item"><img src="/img/favorite.svg" alt="Favoritar livro"></li>
-                    <li class="buttons__item"><img src="/img/bag.svg" alt="Adicionar livro no carrinho de compras"></li>
-                </ul>
-                <a href="#" class="buttons__anchor">Saiba mais</a>
+
+            <div class="card">
+                <div class="card__description">
+                    <div class="description">
+                        <img src="/img/stars.svg" alt="Avaliação 5 estrelas" class="description__title-image">
+                        <h3 class="description__title">Autora do Mês</h3>
+                        <h2 class="description__title-book">Juliana Agarikov</h2>
+                        <p class="description__text">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+                    </div>
+                    <img src="/img/profile-writer.png" alt="Foto da autora Juliana Agarikov" class="description__image">
+                </div>
+                <div class="card__buttons">
+                    <ul class="buttons">
+                        <li class="buttons__item"><img src="/img/favorite.svg" alt="Favoritar livro"></li>
+                        <li class="buttons__item"><img src="/img/bag.svg" alt="Adicionar livro no carrinho de compras"></li>
+                    </ul>
+                    <a href="#" class="buttons__anchor">Saiba mais</a>
+                </div>
             </div>
         </div>
 
