--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar">
         <div class="container">
             <input type="checkbox" id="menu" class="container__button">
-            <label for="menu">
+            <label for="menu" class="container__label">
                 <span class="nav__hamburguer-menu container__image"></span>
             </label>
             <ul class="list-menu">
@@ -51,7 +51,7 @@
 
         <ul class="options">
             <input type="checkbox" id="options-menu" class="options__button">
-            <label for="options-menu">
+            <label for="options-menu" class="options__label">
                 <li class="options__item">Categorias</li>
             </label>
 
